# python-meme-generator

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
meme_generator/: __main__.py  common.py  constants.py  fontconfig.py  helpers.py  render.py  text.py  types.py
meme_generator/cairo_draw/: common.py  constants.py  font_manager.py  fontconfig.py  helpers.py  render.py  text.py
meme_generator/cairo_draw/draw/: base.py  image.py  line.py  text.py
meme_generator/draw/: base.py  image.py  line.py  text.py
meme_generator/memes/: base_image_text_meme.py  base_meme.py
meme_generator/memes/borgar/: __init__.py  tests.py
meme_generator/memes/pooh/: __init__.py  tests.py
meme_generator/memes/supermind/: __init__.py  test.py  tests.py
tests/: test_helpers.py  test_render.py
tests/texts/: test_align.py  test_font_manager.py  test_fontconfig.py  test_styles.py
