[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.cfg]

[bumpversion:file:setup.py]
[bumpversion:file:docs/source/conf.py]

[bumpversion:file:meme_generator/__init__.py]

[wheel]
universal = 1

[flake8]
ignore = E402 W503 F821
exclude =
	.git,
	.tox,
	docs,
	build,
	dist,
	tests,
	meme_generator/cairo_draw/fontconfig.py,
	tests.py,
max-line-length = 99


# Global options:

[mypy]
python_version = 3.7
ignore_missing_stubs = True


[mypy-meme_generator.*]
disallow_untyped_defs = True

[mypy-meme_generator.fontconfig]
ignore_errors = True

[mypy-meme_generator.*.tests]
ignore_errors = True
